--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Open Sans", sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -11,6 +11,10 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.MuiTypography-root {
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 a {
